--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       - API_BASE_URL=${API_BASE_URL}
       - MENU_NAME=${MENU_NAME}
       - SITE_NAME=${SITE_NAME}
+      - API_DEBUG=${API_DEBUG}
+      - MENU_CACHE_TTL_SECONDS=${MENU_CACHE_TTL_SECONDS}
     volumes:
       - .:/app
     container_name: flask_app
-    
